--- a/client-app/src/Pages/CSS/StudentDetails.css
+++ b/client-app/src/Pages/CSS/StudentDetails.css
@@ -1,47 +1,49 @@
 .student-grid {
   display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-    /* Space between grid items */
-  }
-  
-  .student-box {
-    flex: 1 0 calc(25% - 16px);
-    /* Four boxes per row, ensuring all boxes are the same size */
-    height: 200px;
-    /* Ensure boxes are square */
-    max-width: calc(25% - 16px);
-    /* Ensure boxes do not exceed 25% of the container width */
-    background-color: #56596C;
-    padding: 16px;
-    border: 1px solid #B3B4BD;
-    border-radius: 8px;
-    cursor: pointer;
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-size: cover;
-    background-position: center;
-    color: white;
-  }
-  
-  .student-box:hover {
-    background-color: #141619;
-  }
-  
-  .student-box p {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-  }
+  flex-wrap: wrap;
+  gap: 16px;
+  /* Space between grid items */
+}
+
+.student-box {
+  flex: 1 0 calc(25% - 16px);
+  /* Four boxes per row, ensuring all boxes are the same size */
+  height: 200px;
+  /* Ensure boxes are square */
+  max-width: calc(25% - 16px);
+  /* Ensure boxes do not exceed 25% of the container width */
+  background-color: #56596C;
+  padding: 16px;
+  border: 1px solid #B3B4BD;
+  border-radius: 8px;
+  cursor: pointer;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+.student-box:hover {
+  background-color: #141619;
+}
+
+.student-box p {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
 .student-details-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 16px;
 }
+
 .search-container {
   display: flex;
   justify-content: space-between;
@@ -57,28 +59,30 @@
   margin-right: 8px;
   width: calc(100% - 100px);
 }
+
 .add-btn {
   padding: 8px 8px;
   border: none;
-    border-radius: 4px;
-    background-color: #0A21C0;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .add-btn:hover {
-    background-color: #050a44;
-  }
-  
-  .btn-det {
-    padding: 8px 8px;
-    margin-left: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #0A21C0;
-    color: white;
-    cursor: pointer;
-  }
+  border-radius: 4px;
+  background-color: #0A21C0;
+  color: white;
+  cursor: pointer;
+}
+
+.add-btn:hover {
+  background-color: #050a44;
+}
+
+.btn-det {
+  padding: 8px 8px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: #0A21C0;
+  color: white;
+  cursor: pointer;
+}
+
 .btn-det:hover {
   background-color: #050A44;
 }
@@ -90,6 +94,7 @@
   border-radius: 8px;
   margin-top: 16px;
 }
+
 .student-form {
   background-color: white;
   padding: 16px;
@@ -128,6 +133,7 @@
 .student-form label input[type="checkbox"] {
   margin-right: 8px;
 }
+
 .student-form button {
   padding: 8px 16px;
   border: none;
@@ -137,6 +143,7 @@
   cursor: pointer;
   margin-top: 8px;
 }
+
 .student-form button:hover {
   background-color: #050A44;
 }
@@ -159,63 +166,64 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 50px;
-  }
+}
 
-  input[type="file"] {
-    padding: 8px;
-    border: 1px solid #B3B4BD;
-    border-radius: 4px;
-    margin-right: 8px;
-  }
-  .file-upload {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 16px;
-  }
-  
-  .file-upload input[type="file"] {
-    display: none;
-  }
-  
-  .custom-file-upload {
-    padding: 10px 20px;
-    background-color: #0A21C0;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .custom-file-upload:hover {
-    background-color: #050A44;
-  }
-  
-  .upload-btn {
-    padding: 10px 20px;
-    background-color: #0A21C0;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .upload-btn:hover {
-    background-color: #050A44;
-  }
-  .delete-all-btn {
-    background-color: #050A44;
-    margin-left: 40%;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 20px; /* Add margin to space it from the grid */
-  }
-  
-  .delete-all-btn:hover {
-    background-color: white; 
-    border: 2px solid #050A44;
-  }
-  
+input[type="file"] {
+  padding: 8px;
+  border: 1px solid #B3B4BD;
+  border-radius: 4px;
+  margin-right: 8px;
+  cursor: pointer;
+}
+
+.file-upload {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
+
+.file-upload input[type="file"] {
+  display: none;
+}
+
+.custom-file-upload {
+  padding: 10px 20px;
+  background-color: #0A21C0;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.custom-file-upload:hover {
+  background-color: #050A44;
+}
+
+.upload-btn {
+  padding: 10px 20px;
+  background-color: #0A21C0;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.upload-btn:hover {
+  background-color: #050A44;
+}
+
+.delete-all-btn {
+  background-color: #0A21C0;
+  color: white;
+  margin-left: 40%;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.delete-all-btn:hover {
+  background-color: #050A44;
+}
