--- a/client-app/src/Pages/CSS/Payment.css
+++ b/client-app/src/Pages/CSS/Payment.css
@@ -1,71 +1,18 @@
-/* Container for Payment form */
-.payment-container {
-  max-width: 500px;
-  margin: 100px auto;
-  background-color: white;
-  padding: 30px;
-  border-radius: 15px;
-  border: 3px solid #56596c;
-  text-align: center;
-}
-
-/* Headings Styling */
-.payment-container h2 {
-  color: #050A44;
-  font-size: 24px;
-  margin-bottom: 20px;
-  font-weight: bold;
-}
-
-.payment-container p {
-  color: #141619;
-  font-size: 20px;
-  margin-bottom: 20px;
-  font-weight: bold;
-}
-
-/* Form Labels */
-.form-group label {
-  font-weight: bold;
-  font-size: 16px;
-  color: #141619;
-  text-align: left;
-  display: block;
-  margin-bottom: 8px;
-}
-
-/* Form Controls Styling (Input fields and select dropdowns) */
-.form-control {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  font-size: 16px;
-  border: 1px solid black;
-  border-radius: 5px;
-  box-sizing: border-box;
-  background-color: white;
-  color: #141619;
-  outline: none;
-}
-
-.form-control:focus {
-  border-color: #050A44;
-  box-shadow: 0 0 5px #050A44;
-}
 
 /* Button Styling */
-
-/* Payment Details */
-.payment-details {
-  background-color: white; /* Changed from black to white */
-  padding: 16px;
-  border-radius: 8px;
-  color: #141619; /* Change text color to dark gray for visibility */
-  margin-top: 16px;
-  border: 1px solid #B3B4BD; /* Optional: Add a light border for definition */
+.pay-btn {
+  width: 100%;
+  padding: 12px;
+  font-size: 18px;
+  background-color: #0A21C0;
+  color: white;
+  border: 2px solid #050A44;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-.payment-details p {
-  margin: 5px 0;
+.pay-btn:hover {
+  background-color: #050A44;
+  color: white;
 }
-
