--- a/client-app/src/Pages/CSS/AdminFood.css
+++ b/client-app/src/Pages/CSS/AdminFood.css
@@ -60,3 +60,73 @@
   background-color: #050A44; 
 }
 
+.qr-btn {
+  background-color: #0A21C0; 
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+.qr-btn:hover {
+  transform: scale(1.05); 
+}
+
+.food-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Space between cards */
+  padding: 20px;
+  justify-content: center; /* Center cards horizontally */
+}
+
+.food-list ul {
+  list-style: none;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Card shadow */
+  background-color: #fff;
+  width: 250px;
+  text-align: center;
+  margin-bottom: 20px; /* Space between cards */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.food-list .food-image {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+.food-list span {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.food-list div {
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+
+.food-list button {
+  background-color: #050A44;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.food-list button:hover {
+  transform: scale(1.05);
+}
+
