--- a/client-app/src/Pages/CSS/LandingPage.css
+++ b/client-app/src/Pages/CSS/LandingPage.css
@@ -44,3 +44,24 @@ body {
 .btn:hover {
   background-color: #141619;
 }
+
+.top-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.top-btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #3498db;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.top-btn:hover {
+  background-color: #2980b9;
+}
