--- a/client-app/src/Pages/CSS/LandingPage.css
+++ b/client-app/src/Pages/CSS/LandingPage.css
@@ -48,20 +48,21 @@ body {
 .top-buttons {
   display: flex;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 40px;
 }
 
 .top-btn {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #3498db;
+  background-color: #0A21C0;
   color: white;
   border: none;
   cursor: pointer;
   border-radius: 5px;
+  margin-right: 10px;
   transition: background-color 0.3s;
 }
 
 .top-btn:hover {
-  background-color: #2980b9;
+  background-color: #050A44;
 }
