--- a/client-app/src/Pages/CSS/Header.css
+++ b/client-app/src/Pages/CSS/Header.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #141619; /* Darkened background color for header */
+    background-color: var(--header); /* Darkened background color for header */
     color: white;
     padding: 15px;
     text-align: center;
