--- a/client-app/src/Pages/CSS/LandingPage.css
+++ b/client-app/src/Pages/CSS/LandingPage.css
@@ -1,6 +1,15 @@
 /* Body background color remains fixed */
+:root {
+  --rest-but: #101624;
+  --shadow-but: #dbe3ee;
+  --base: #eff1f5;
+  --box: white;
+  --header: #242e4c;
+  --hov-but: #9db2bf;
+}
+
 body {
-  background-color: #B3B4BD;
+  background-color: var(--base);
   overflow-x: hidden;
   margin: 0;
   height: 100%;
@@ -8,26 +17,29 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.landing-page h3{
+  margin-top: 20px;
+}
+
 .landing-page {
   text-align: center;
-  background-color: white;
+  background-color: var(--base); /* Light color that contrasts well with the body */
   padding: 50px;
   border-radius: 10px;
-  box-shadow: 0px 0px 10px #B3B4BD;
-
-  /* Centering the landing page content */
+  box-shadow: 0 0 10px 5px var(--shadow-but);
   position: absolute;
   top: 50%;
   left: 50%;
+  height: 250px;
   transform: translate(-50%, -50%);
 }
 
 /* Container for buttons */
 .button-container {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   gap: 20px;
-  margin-top: 20px;
+  margin-top: 60px;
 }
 
 /* Button styles */
@@ -35,34 +47,50 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  background-color: #56596c;
+  background-color: var(--rest-but);
   color: white;
-  border: none;
+  border: 1.5px solid transparent; /* Keep consistent border width */
   border-radius: 5px;
+  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
 }
 
 .btn:hover {
-  background-color: #141619;
+  background-color: var(--hov-but);
+  color: black;
+  border-color: var(--rest-but); /* No change in border width */
+  font-weight: 600;
 }
 
 .top-buttons {
   display: flex;
-  justify-content: space-between;
-  margin-top: 40px;
+  justify-content: space-between; /* Aligns buttons on opposite sides */
+  margin-top: 100px; /* Adjust margin as needed */
+  padding: 0 10px; /* Adds padding to the left and right for spacing */
+  width: 100%; /* Ensures full width of the container */
 }
 
-.top-btn {
+.top-btn1, .top-btn2 {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #0A21C0;
+  background-color: var(--rest-but); /* Use your defined color variables */
   color: white;
-  border: none;
+  border: 1.5px solid transparent; /* Set consistent border width */
   cursor: pointer;
   border-radius: 5px;
-  margin-right: 10px;
-  transition: background-color 0.3s;
+  transition: background-color 0.3s, border-color 0.3s, color 0.3s;
 }
 
-.top-btn:hover {
-  background-color: #050A44;
+.top-btn1 {
+  margin-left: 20px;
+}
+
+.top-btn2 {
+  margin-right: 40px;
+}
+
+.top-btn1:hover, .top-btn2:hover {
+  background-color: var(--hov-but); /* Hover background color */
+  color: black; /* Hover text color */
+  font-weight: 600; /* Set weight to avoid size changes */
+  border-color: var(--rest-but); /* Change border color without changing width */
 }
